--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "dotenv.enableAutocloaking": false,
     "cSpell.words": [
+        "jwtsecret",
         "mysecretkey",
         "typeorm"
     ]
